Fix backdrop-filter on Safari

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -187,6 +187,7 @@ img {
         top: 16px;
         border-radius: 500px;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         background: rgba(0, 0, 0, 0.3);
         box-shadow: var(--default-drop-shadow);
     }
